@@ -793,6 +793,12 @@ abstract class JError
 			// Push the error object into the document
 			$document->setError($error);
 
+			// If site is offline and it's a 404 error, just go to index (to see offline message, instead of 404)
+			if ($error->getCode() == '404' && JFactory::getConfig()->get('offline') == 1)
+			{
+				JFactory::getApplication()->redirect('index.php');
+			}
+
 			@ob_end_clean();
 			$document->setTitle(JText::_('Error') . ': ' . $error->get('code'));
 			$data = $document->render(false, array('template' => $template, 'directory' => JPATH_THEMES, 'debug' => $config->get('debug')));
