@@ -28,6 +28,7 @@ $ -> Language fix or change
 
 03-Aug-2013 Jean-Marie Simonet
  # [#31411] Show Offline image only if it exists. Thanks Tobias Zulauf
+ # [#31360] The site is offline but anyhow the error page will show (e.g. at a 404 error). Thanks Mihail Irintchev
 
 -------------------- 2.5.14 Stable Release 01-August-2013] ------------------
 
